Fixed issue no.:15, spacing on carousel where there is no image or video.

--- a/src/assets/css/materialize.css
+++ b/src/assets/css/materialize.css
@@ -12223,10 +12223,10 @@ span.upload-video-lbl {
     height: 100% !important;
     overflow-y: auto;
 }
-.main_container {
+/*.main_container {
     height: 225px;
 }
-
+*/
 /* feed design*/
 
 .session_feed {
